--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
 
 #tagline {
   width: 100%;
-  height: 500px;
+  height: 600px;
   background-color: black;
   color: white;
   display: flex;
@@ -90,7 +90,8 @@ body {
   font-size: 22px;
   font-weight: 300;
   padding: 0px 30px;
-  margin-right: 100px;
+  margin-right: 150px;
+  padding-bottom: 100px;
 }
 
 @media screen and (max-width: 600px) {  
@@ -170,8 +171,8 @@ body {
 }
 
 #showcase .game_info img {
-  height: 300px;
-  width: 500px;
+  height: 280px;
+  width: 475px;
   border-radius: 15px;
 }
 
